[debugger] IDEA-392189 Protect against classes unloading during log capture
GitOrigin-RevId: 3865c0d8de1501d08e58c7add55bde6b04232ff3